生成视频封面图

--- a/videos-dev-mini-api/src/main/resources/application.properties
+++ b/videos-dev-mini-api/src/main/resources/application.properties
@@ -78,7 +78,7 @@ file-root-path=D:/project/resources/videos-dev/
 face-relative-path=face/
 videos-relative-path=videos/
 # \u9ED8\u8BA4\u89C6\u9891\u5C01\u9762
-videos-cover-path=cover/cover.jpg
+videos-cover-path=cover/
 max-video-seconds=300.00
 min-video-seconds=1.00
 
