--- a/videos-dev-common/pom.xml
+++ b/videos-dev-common/pom.xml
@@ -135,16 +135,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-        <!-- 		<dependency> -->
-        <!-- 			<groupId>redis.clients</groupId> -->
-        <!-- 			<artifactId>jedis</artifactId> -->
-        <!-- 			<version>2.9.0</version> -->
-        <!-- 		</dependency> -->
-        <!-- 		<dependency> -->
-        <!-- 			<groupId>org.springframework.data</groupId> -->
-        <!-- 			<artifactId>spring-data-redis</artifactId> -->
-        <!-- 			<version>1.8.7.RELEASE</version> -->
-        <!-- 		</dependency> -->
 
         <!-- 引入zookeeper -->
         <dependency>
@@ -176,6 +166,14 @@
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
 
     </dependencies>
 
